# epidemic

./: LICENSE  README.md  pyproject.toml  setup.cfg
api/apps/abnormal/: apps.py  filters.py  models.py  serializers.py  views.py
api/apps/abnormal/migrations/: 0001_initial.py
api/apps/core/: apps.py  models.py  pagination.py  tests.py  validators.py
api/apps/inspection/: apps.py  filters.py  models.py  serializers.py  views.py
api/apps/inspection/migrations/: 0001_initial.py
api/apps/notices/: apps.py  filters.py  models.py  serializers.py  views.py
api/apps/notices/migrations/: 0001_initial.py
api/apps/reptile/: apps.py  epidemic_data.py  models.py  serializers.py  views.py
api/apps/reptile/migrations/: 0001_initial.py
api/apps/reptile/utils/: __init__.py  common.py  getSign.py  hash.py
api/apps/users/: admin.py  avatar_generator.py  filters.py  models.py  serializers.py  signals.py  views.py
api/apps/users/migrations/: 0001_initial.py
api/apps/vaccinate/: apps.py  filters.py  models.py  serializers.py  views.py
api/apps/vaccinate/migrations/: 0001_initial.py
config/: api_router.py  asgi.py  urls.py  wsgi.py
config/settings/: common.py  local.py  production.py
